<?xml version="1.0"?>
<package format="2">
  <name>seronet_dock</name>
  <version>0.0.1</version>
  <description>Autonomous docking adapter for SeRoNet</description>

  <license>public</license>

  <maintainer email="hannes.bachter@mojin-robotics.de">Hannes Bachter</maintainer>
  <author email="hannes.bachter@mojin-robotics.de">Hannes Bachter</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>cob_actions</exec_depend>
  <exec_depend>cob_bringup</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


</package>
